# neural-network-from-scratch

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  dgemm.c  idx_loader.c  idx_loader.h  lol  main  main.c  matrix.c  matrix.h  mnist_loader.h  neural_network.c  neural_network.h
